[project]
name = "box-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "chgaobt",email = "chloejgao@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "supabase (>=2.31.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"